Bug 458398 - Crashed while trying out new DND in projects
Summary: Crashed while trying out new DND in projects
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-08-27 17:07 UTC by Eric Armbruster
Modified: 2022-08-29 06:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Armbruster 2022-08-27 17:07:01 UTC
#0  0x00007f96d65e6a5a in operator==(QString const&, QString const&) () from /usr/lib/libQt5Core.so.5
#1  0x00007f96cf42168b in operator!= (s2=..., s1=...) at /usr/include/qt/QtCore/qstring.h:809
#2  operator() (__closure=0x55b49cf67f10) at /home/eric/kde/src/kate/addons/project/kateproject.cpp:71
#3  QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, KateProjectModel::dropMimeData(const QMimeData*, Qt::DropAction, int, int, const QModelIndex&)::<lambda()> >::call (
    arg=<optimized out>, f=...) at /usr/include/qt/QtCore/qobjectdefs_impl.h:146
#4  QtPrivate::Functor<KateProjectModel::dropMimeData(const QMimeData*, Qt::DropAction, int, int, const QModelIndex&)::<lambda()>, 0>::call<QtPrivate::List<>, void> (arg=<optimized out>, f=...)
    at /usr/include/qt/QtCore/qobjectdefs_impl.h:256
#5  QtPrivate::QFunctorSlotObject<KateProjectModel::dropMimeData(const QMimeData*, Qt::DropAction, int, int, const QModelIndex&)::<lambda()>, 0, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void **, bool *) (which=<optimized out>, this_=0x55b49cf67f00, r=<optimized out>, 
    a=<optimized out>, ret=<optimized out>) at /usr/include/qt/QtCore/qobjectdefs_impl.h:443
#6  0x00007f96d6744341 in ?? () from /usr/lib/libQt5Core.so.5
#7  0x00007f96d7af5e72 in KJob::finished (this=this@entry=0x55b49ca47c40, _t1=<optimized out>, 
    _t1@entry=0x55b49ca47c40, _t2=...)
    at /home/eric/kde/build/kcoreaddons/src/lib/KF5CoreAddons_autogen/include/moc_kjob.cpp:612
#8  0x00007f96d7af747f in KJob::finishJob (this=0x55b49ca47c40, emitResult=<optimized out>)
    at /home/eric/kde/src/kcoreaddons/src/lib/jobs/kjob.cpp:95
#9  0x00007f96d6744341 in ?? () from /usr/lib/libQt5Core.so.5
#10 0x00007f96d7af5fc5 in KJob::result (this=this@entry=0x55b49d038c70, _t1=<optimized out>, 
    _t1@entry=0x55b49d038c70, _t2=...)
    at /home/eric/kde/build/kcoreaddons/src/lib/KF5CoreAddons_autogen/include/moc_kjob.cpp:633
#11 0x00007f96d7af74ab in KJob::finishJob (this=0x55b49d038c70, emitResult=<optimized out>)
    at /home/eric/kde/src/kcoreaddons/src/lib/jobs/kjob.cpp:98
#12 0x00007f96d6744341 in ?? () from /usr/lib/libQt5Core.so.5
#13 0x00007f96d7af5fc5 in KJob::result (this=this@entry=0x55b49dfa8eb0, _t1=<optimized out>, 
    _t1@entry=0x55b49dfa8eb0, _t2=...)
    at /home/eric/kde/build/kcoreaddons/src/lib/KF5CoreAddons_autogen/include/moc_kjob.cpp:633
#14 0x00007f96d7af74ab in KJob::finishJob (this=0x55b49dfa8eb0, emitResult=<optimized out>)
    at /home/eric/kde/src/kcoreaddons/src/lib/jobs/kjob.cpp:98
#15 0x00007f96d6744341 in ?? () from /usr/lib/libQt5Core.so.5
#16 0x00007f96d84e7b43 in KIO::SlaveInterface::dispatch (this=0x55b49c45dc00, _cmd=<optimized out>, 
    rawdata=...) at /home/eric/kde/src/kio/src/core/slaveinterface.cpp:149
#17 0x00007f96d84e6196 in KIO::SlaveInterface::dispatch (this=0x55b49c45dc00)
    at /home/eric/kde/src/kio/src/core/slaveinterface.cpp:78
#18 0x00007f96d84eb449 in KIO::Slave::gotInput (this=0x55b49c45dc00)
    at /home/eric/kde/src/kio/src/core/slave.cpp:346
#19 0x00007f96d6744341 in ?? () from /usr/lib/libQt5Core.so.5
#20 0x00007f96d6737440 in QObject::event(QEvent*) () from /usr/lib/libQt5Core.so.5
#21 0x00007f96d72fcb3c in QApplicationPrivate::notify_helper(QObject*, QEvent*) ()
   from /usr/lib/libQt5Widgets.so.5
#22 0x00007f96d6713ad8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) ()
   from /usr/lib/libQt5Core.so.5
#23 0x00007f96d67145e3 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) ()
   from /usr/lib/libQt5Core.so.5
#24 0x00007f96d675a548 in ?? () from /usr/lib/libQt5Core.so.5
#25 0x00007f96d498bc6b in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#26 0x00007f96d49e2001 in ?? () from /usr/lib/libglib-2.0.so.0
#27 0x00007f96d4989392 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#28 0x00007f96d675e32c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>)
    () from /usr/lib/libQt5Core.so.5


STEPS TO REPRODUCE
1. Copied a pdf from downloads into the Kate folder. Wanted to try out DND.
2. Could not reproduce again.
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Waqar Ahmed 2022-08-29 06:44:33 UTC
Git commit 3d37590f7b89df50573ddced7114b9ec215af3ea by Waqar Ahmed.
Committed on 29/08/2022 at 06:43.
Pushed by waqar into branch 'master'.

Project: Add some more checks in DND

Not sure what caused the crash in the linked bug, but adding another
check and capturing the variable outside doesn't hurt

M  +4    -3    addons/project/kateproject.cpp
M  +2    -1    addons/project/kateproject.h

https://invent.kde.org/utilities/kate/commit/3d37590f7b89df50573ddced7114b9ec215af3ea
Comment 2 Waqar Ahmed 2022-08-29 06:45:22 UTC
If it happens again feel free to reopen, haven't been able to repro myself yet