Project: Add some more checks in DND

Not sure what caused the crash in the linked bug, but adding another
check and capturing the variable outside doesn't hurt

BUG: 458398